SAMZA-250; bump heap for integration tests